[project]
name = "agent-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris Mungall", email = "cjm@berkeleybop.org" }
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
    "fastobo==0.12.3",
    "oaklib>=0.6.21",
    "pydantic-ai>=0.0.46",
]

[project.scripts]
agent-tutorial = "agent_tutorial:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
